--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
-title: Site Title
+title: Lara Fountaine
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+This is a personal website
 permalink: '/:title/'
 
 # Author settings
-author: Your Name # add your name
+author: Lara # add your name
 author-pic: yosh-ginsu.jpg
-about-author: About you
+about-author: Community Engagement and Visitor Relations Librarian
 
 # Contact links
 email: # Add your Email address
