update name, title, description

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >
 permalink: '/:title/'
 
 # Author settings
-author: Lara # add your name
+author: Lara
 author-pic: yosh-ginsu.jpg
 about-author: Community Engagement and Visitor Relations Librarian
 
