--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >
 permalink: '/:title/'
 
 # Author settings
-author: Lara
+author: Lara # add your name
 author-pic: yosh-ginsu.jpg
 about-author: Community Engagement and Visitor Relations Librarian
 
