updated with name

--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@ description: >
 permalink: '/:title/'
 
 # Author settings
-author: Lara # add your name
+author: Lara Fountaine # add your name
 author-pic: yosh-ginsu.jpg
 about-author: Community Engagement and Visitor Relations Librarian
 
 # Contact links
-email: # Add your Email address
+email: lara.herzellah@gmail.com # Add your Email address
 phone: # Add your Phone number
 website: # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
